add_definitions(-DPYIEX_EXPORTS)

ADD_LIBRARY ( PyIex ${LIB_TYPE}
	PyIex.cpp
)

TARGET_LINK_LIBRARIES ( PyIex
	${PYTHON_LIBRARIES}
)

INSTALL ( TARGETS PyIex
	DESTINATION
	lib
)

ADD_LIBRARY ( iexmodule ${LIB_TYPE}
	iexmodule.cpp
)

IF(WIN32)
    SET_TARGET_PROPERTIES ( iexmodule
   	PROPERTIES PREFIX "" BUILD_WITH_INSTALL_RPATH ON
    )
ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    SET_TARGET_PROPERTIES ( iexmodule
    PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
    )
ENDIF()


TARGET_LINK_LIBRARIES ( iexmodule
	PyIex
	Iex${ILMBASE_LIBSUFFIX}
	${Boost_LIBRARIES}
)

INSTALL ( TARGETS iexmodule
	DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
)

install(DIRECTORY ${PROJECT_INCLUDE_DIR}/
    DESTINATION "include/OpenEXR"
    FILES_MATCHING
    PATTERN "*.h"
    )