
ADD_LIBRARY ( imathnumpymodule ${LIB_TYPE}
    imathnumpymodule.cpp
)

if(WIN32)
	SET_TARGET_PROPERTIES ( imathnumpymodule
	PROPERTIES PREFIX "" SUFFIX ".pyd" BUILD_WITH_INSTALL_RPATH ON
	OUTPUT_NAME "imathnumpy"
	)
else()
	SET_TARGET_PROPERTIES ( imathnumpymodule
		PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
	)
endif()

INCLUDE_DIRECTORIES (
	${NUMPY_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES ( imathnumpymodule
	PyImath
	PyIex
	Imath${ILMBASE_LIBSUFFIX}
	Iex${ILMBASE_LIBSUFFIX}
	${Boost_LIBRARIES}
)

INSTALL ( TARGETS imathnumpymodule
	DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
)

install(DIRECTORY ${PROJECT_INCLUDE_DIR}/
    DESTINATION "include/OpenEXR"
    FILES_MATCHING
    PATTERN "*.h"
    )